<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.wellnessapp.ContentTable">

    <ImageView
        android:id="@+id/BlueLogo"
        android:layout_width="91dp"
        android:layout_height="81dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/health_icon" />

    <ImageView
        android:id="@+id/wellLogo"
        android:layout_width="135dp"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="295dp"
        android:src="@drawable/wellness_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:text="@string/welcome"
        android:textSize="27sp"
        android:textColor="@color/cobalt"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        android:text="@string/select"
        android:textSize="23sp"
        android:textColor="@color/cobalt"/>


    <Button
        android:id="@+id/Flashbutton"
        android:layout_width="157dp"
        android:layout_height="98dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="77dp"
        android:background="@drawable/flashcards"
        android:text="@string/flashButton"
        android:textColor="@color/mustard"
        android:textSize="22sp" />

    <Button
        android:id="@+id/CrosswordButton"
        android:layout_width="157dp"
        android:layout_height="98dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="242dp"
        android:layout_marginTop="77dp"
        android:background="@drawable/crossword"
        android:text="@string/crossButton"
        android:textColor="@color/mustard"
        android:textSize="22sp" />

    <Button
        android:id="@+id/RnSButton"
        android:layout_width="157dp"
        android:layout_height="98dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="322dp"
        android:background="@drawable/readnspeak"
        android:text="@string/RnSButton"
        android:textColor="@color/mustard"
        android:textSize="22sp" />

    <Button
        android:id="@+id/AnatomyButton"
        android:layout_width="157dp"
        android:layout_height="98dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="236dp"
        android:layout_marginTop="322dp"
        android:background="@drawable/list"
        android:text="@string/AnatButton"
        android:textColor="@color/mustard"
        android:textSize="22sp" />

    <Button
        android:id="@+id/PictureButton"
        android:layout_width="157dp"
        android:layout_height="98dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="199dp"
        android:background="@drawable/picturestory"
        android:text="@string/pictureButton"
        android:textColor="@color/mustard"
        android:textSize="22dp" />

</RelativeLayout>