<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/anatomyHeader"
        android:layout_width="match_parent"
        android:layout_height="296dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-60dp"
        android:layout_marginEnd="0dp"
        android:alpha=".80"
        android:src="@drawable/anatomy_header"
        android:contentDescription="@string/anatomyHeader"/>

    <ImageView
        android:id="@+id/wellLogo"
        android:layout_width="135dp"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="294dp"
        android:src="@drawable/wellness_logo"
        android:contentDescription="@string/wellnessLogo"/>

    <ImageView
        android:id="@+id/BlueLogo"
        android:layout_width="91dp"
        android:layout_height="81dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/health_icon"
        android:contentDescription="@string/healthLogo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118dp"
        android:text="@string/anatomyTitle"
        android:textColor="@color/cobalt"
        android:textSize="40sp" />

    <ListView
        android:id="@+id/listView"
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="714dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginBottom="-10dp" />


</RelativeLayout>