<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/BlueLogo"
        android:layout_width="91dp"
        android:layout_height="81dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/health_icon" />

    <ImageView
        android:id="@+id/wellLogo"
        android:layout_width="135dp"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="295dp"
        android:src="@drawable/wellness_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="148dp"
        android:layout_marginBottom="2dp"
        android:text="@string/pstorymenu"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="229dp"
        android:text="@string/storySelector"
        android:textSize="20sp" />

    <Button
        android:id="@+id/FatimaButton"
        android:layout_width="156dp"
        android:layout_height="164dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="231dp"
        android:layout_marginBottom="103dp"
        android:background="@drawable/fatima_icon" />

    <Button
        android:id="@+id/MariaButton"
        android:layout_width="156dp"
        android:layout_height="164dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/maria_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="-200dp"
        android:layout_marginBottom="44dp"
        android:text="@string/MariaStory"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="501dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="25dp"
        android:textSize="20sp"
        android:text="@string/FatimaStory" />


</RelativeLayout>